--- a/IosTest/IosTest/Base.lproj/Main.storyboard
+++ b/IosTest/IosTest/Base.lproj/Main.storyboard
@@ -69,6 +69,9 @@
                     <navigationItem key="navigationItem" id="KZ5-37-fSC">
                         <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="xKm-Hv-yAI">
                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="tapRefresh:" destination="bdG-oo-X7A" id="sZX-sv-hK7"/>
+                            </connections>
                         </barButtonItem>
                     </navigationItem>
                 </collectionViewController>
